hphp/test/zend/good/Zend/tests/errmsg_023.php.expectf

Fatal error: Access level to test::$var() must be protected (as in class test1) or weaker in %s/errmsg_023.php on line 7
